# ChatSystem

./: .gitignore  .~lock.CS 513 Client Server Chat Class Project Fall 2019 (1).rtf#  CMakeLists.txt  CMakelists.txt  CS 513 Client Server Chat Class Project Fall 2019 (1).rtf  CS 513 Client Server Chat Class Project Fall 2019.docx  command_doc.txt  common.h  testu.cpp  utilities.cpp  utilities.h
client/: CMakeLists.txt  client.glade  clientChatData.h  clientGui.cpp  clientGui.h  clientNet.cpp  clientNet.h  main.cpp  test.cpp  testGui.cpp
server/: CMakeLists.txt  main.cpp  serverNet.cpp  serverNet.h
